--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -11,11 +11,14 @@
     -webkit-text-fill-color: transparent;
 }
 
-/* .bg-img{
-    height: 100vh;
-    width: 100vw;
-    background-image: url("./bg.jpg");
-} */
+.bg-img{
+    background-image: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url("./bg-3.jpg");
+    background-size: cover;
+    min-height:  calc(100vh - 112px);
+}
+.banner-1 {
+    height: calc(100vh - 112px);
+}
 /* 
 .wrapper{
     display: grid;
